# libkundo2

./: CMakeLists.txt  HOWTO  backward-port.sh  forward-port.sh  port-kundo2.sh
src/: CMakeLists.txt  kundo2command.h  kundo2group.cpp  kundo2group.h  kundo2model.cpp  kundo2model.h  kundo2qstack.h  kundo2stack.cpp  kundo2stack.h  kundo2stack_p.h  kundo2view.cpp  kundo2view.h  kundogroup2.cpp  kundogroup2.h  kundomodel2.cpp  kundomodel2.h  kundostack2.cpp  kundostack2.h  kundostack2_p.h
